# python_projects

./: README.md
medication_reminder/: main.py  patient.py  pyproject.toml
